--- a/app/src/main/res/layout/holder_barcode_data.xml
+++ b/app/src/main/res/layout/holder_barcode_data.xml
@@ -36,7 +36,7 @@
                 app:barcode="@{barcodeData.barcode}"
                 app:format="@{barcodeData.format}"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/checkbox"
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:src="@drawable/image_qr"/>
 
@@ -54,22 +54,39 @@
                 app:layout_constraintHorizontal_bias="1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/barcode_view"
-                app:layout_constraintEnd_toStartOf="@id/checkbox"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/barcode_text_view"/>
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/checkbox"
+                android:src="@drawable/ic_checkbox"
+                app:isActivated="@{isChecked}"
                 android:visibility="@{isSelecting ? View.VISIBLE : View.GONE}"
-                android:src="@{isChecked ? @drawable/ic_round_check_box_24 : @drawable/ic_round_check_box_outline_blank_24}"
                 android:background="@android:color/transparent"
                 android:tint="?attr/colorPrimary"
-                android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 tools:visibility="visible"
                 tools:src="@drawable/ic_round_check_box_24"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:text="@{barcodeData.name}"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="?attr/colorSecondary"
+                android:id="@+id/name_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toTopOf="@id/bookmark_view"
+                app:layout_constraintBottom_toBottomOf="@id/bookmark_view"
+                app:layout_constraintStart_toEndOf="@id/barcode_view"
+                app:layout_constraintEnd_toEndOf="@id/bookmark_view"
+                tools:text="Name"/>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/barcode_text_view"
